# RepoResume

./: .gitignore  CONTRIBUTING.md  DESKTOP_BUILD_GUIDE.md  DESKTOP_QUICKSTART.md  DESKTOP_README.md  PROJECT_SUMMARY.md  QUICK_BUILD.md  README.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  SETUP_GUIDE.md  USER_GUIDE.md  build-desktop.bat  docker-compose.yml  install-all.bat  package.json
backend/: .eslintrc.json  Dockerfile  jest.config.js  package.json
backend/src/: index.js
backend/src/config/: database.js  passport.js  swagger.js
backend/src/controllers/: authController.js  exportController.js  repositoryController.js  taskController.js  userController.js
backend/src/middleware/: auth.js  errorHandler.js  validation.js
backend/src/models/: Analysis.js  Repository.js  Task.js  User.js  UserSettings.js  index.js
backend/src/routes/: auth.js  export.js  index.js  repositories.js  tasks.js  users.js
backend/src/services/analysis/: codeAnalyzer.js  healthCalculator.js  taskGenerator.js
backend/src/utils/: encryption.js  logger.js
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx  LoadingSpinner.jsx
frontend/src/hooks/: useAuth.js
frontend/src/pages/: Dashboard.jsx  LandingPage.jsx  RepositoryDetail.jsx  SettingsPage.jsx  TasksPage.jsx
frontend/src/services/: api.js
(+2 files in other folders)
